--- a/css/style.css
+++ b/css/style.css
@@ -493,3 +493,28 @@ body{
 .social-media-icon{
         fill: #f4f4fd;
 }
+
+
+/* BACKDROP */
+
+.backdrop{
+        position: fixed;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(46, 47, 66, 0.40);
+        z-index: 9999999;
+}
+
+.modal{
+        position: absolute;
+        height: 584px;
+        width: 408px;
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-top: 72px;
+        padding-bottom: 24px;
+        border-radius: 4px;
+        background-color: #FCFCFC;
+}
