--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,16 @@ body{
         height: 100%;
         background-color: rgba(46, 47, 66, 0.40);
         z-index: 9999999;
+        /* opacity: 0;
+        visibility: hidden;
+        pointer-events: none; */
+        transition: opacity 500ms linear, visibility 500ms linear;
+}
+
+.backdrop.is-open{
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
 }
 
 .modal{
