--- a/css/style.css
+++ b/css/style.css
@@ -557,3 +557,81 @@ body{
 .close-btn-icon{
         transition: fill 250ms ease-out;
 }
+
+.review-form-description{
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+        margin-bottom: 16px;
+}
+
+.review-form-field-label{
+        display: block;
+        color: #8E8F99;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        margin-bottom: 4px;
+}
+
+.review-form-input{
+        width: 100%;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid rgba(46, 47, 66, 0.40);
+        padding-left: 38px;
+        transition: border-color 250ms ease-out;
+}
+
+.review-form-input:focus{
+        border-color: #4D5AE5;
+        outline: transparent;
+}
+
+.review-form-field-icon{
+        position: absolute;
+        top: 50%;
+        left: 16px;
+        transform: translateY(-50%);
+        fill: #2E2F42;
+        transition: fill 250ms ease-out;
+}
+
+.review-form-input:focus + .review-form-field-icon{
+        fill: #4D5AE5;
+}
+
+.review-form-input-wrapper{
+        position: relative;
+        margin-bottom: 8px;
+}
+
+.review-form-comment{
+        width: 100%;
+        height: 120px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 16px;
+        padding-right: 16px;
+        border-radius: 4px;
+        border: 1px solid rgba(46, 47, 66, 0.40);
+        resize: none;
+        transition: border-color 250ms ease-out;
+}
+
+.review-form-comment::placeholder{
+        font-family: "Roboto", sans-serif;
+        color: rgba(46, 47, 66, 0.40);
+}
+
+.review-form-comment:focus{
+        border-color: #4D5AE5;
+        outline: transparent;
+}
