--- a/css/style.css
+++ b/css/style.css
@@ -565,6 +565,7 @@ body{
         letter-spacing: 0.02em;
         color: #2E2F42;
         margin-bottom: 16px;
+        text-align: center;
 }
 
 .review-form-field-label{
@@ -671,9 +672,8 @@ body{
 
 .review-form-checkbox-label{
         font-size: 12px;
-        font-style: normal;
         font-weight: 400;
-        line-height: 1,17;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         color: #8E8F99;
 }
@@ -689,3 +689,28 @@ body{
         border-color: #4D5AE5;
  }
 
+ .review-form-checkbox-wrapper{
+        margin-bottom: 24px;
+        margin-top: 16px;
+ }
+
+ .review-form-submit{
+        color: #FFF;
+        background-color: #4D5AE5;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        cursor: pointer;
+        display: block;
+        min-width: 169px;
+        height: 56px;
+        border: none;
+        border-radius: 4px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 24px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
