--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,47 @@ body{
 }
 
 
+.subscribe-container{
+        margin-left: 80px;
+}
+
+
+.subscribe-list{
+        display: flex;
+}
+
+
+.subscribe-text{
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        margin-bottom: 16px;
+}
+
+.subscribe-item{
+        list-style-type: none;
+}
+
+.review-form-subscribe{
+        width: 264px;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid #FFF;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        background-color: transparent;
+}
+
+
+.subscribe-button{
+        margin-left: 24px;
+}
+
+
+
+
+
 /* BACKDROP */
 
 .backdrop{
@@ -505,9 +546,9 @@ body{
         height: 100%;
         background-color: rgba(46, 47, 66, 0.40);
         z-index: 9999999;
-        /* opacity: 0;
+        opacity: 0;
         visibility: hidden;
-        pointer-events: none; */
+        pointer-events: none;
         transition: opacity 500ms linear, visibility 500ms linear;
 }
 
@@ -522,7 +563,7 @@ body{
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        height: 584px;
+        min-height: 584px;
         width: 408px;
         padding-left: 24px;
         padding-right: 24px;
@@ -711,6 +752,10 @@ body{
         border-radius: 4px;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 24px;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .review-form-submit:hover,
+ .review-form-submit:focus{
+        background-color: #404BBF;
  }
