--- a/css/style.css
+++ b/css/style.css
@@ -547,8 +547,11 @@ body{
         cursor: pointer;
         background-color: #4D5AE5;
         border: none;
-        border-radius: 4px;
-        gap: 16px;      
+        border-radius: 4px;     
+}
+
+.subscribe-icon{
+        margin-left: 16px;
 }
 
 
@@ -561,7 +564,7 @@ body{
 .backdrop{
         position: fixed;
         left: 0;
-        right: 0;
+        top: 0;
         width: 100%;
         height: 100%;
         background-color: rgba(46, 47, 66, 0.40);
@@ -569,7 +572,8 @@ body{
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
-        transition: opacity 500ms linear, visibility 500ms linear;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open{
@@ -591,10 +595,17 @@ body{
         padding-bottom: 24px;
         border-radius: 4px;
         background-color: #FCFCFC;
+        box-shadow: 1px 1px rgba(0, 0, 0, 0.14),
+                0px 1px 3px rgba(0, 0, 0, 0.12),
+                0px 2px 1px rgba(0, 0, 0, 0.2);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn{
+        display: flex;
         position: absolute;
+        align-items: center;
+        justify-content: center;
         top: 24px;
         right: 24px;
         line-height: 0;
@@ -606,17 +617,25 @@ body{
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         background-color: #E7E9FC;
         fill: #2E2F42;
+        cursor: pointer;
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn:hover,
 .close-btn:focus{
         background-color:#404BBF;
         fill: #FFFFFF;
+        border: none;
+}
+
+.review-form-field-wrapper{
+        margin-bottom: 8px;
 }
 
 
 .close-btn-icon{
-        transition: fill 250ms ease-out;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-description{
