--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,7 @@ body{
         background-color: #E7E9FC;
         fill: #2E2F42;
         cursor: pointer;
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -630,7 +630,7 @@ body{
 }
 
 .review-form-field-wrapper{
-        margin-bottom: 8px;
+        margin-bottom: 16px;
 }
 
 
@@ -664,7 +664,9 @@ body{
         border-radius: 4px;
         border: 1px solid rgba(46, 47, 66, 0.40);
         padding-left: 38px;
-        transition: border-color 250ms ease-out;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        background-color: transparent;
+        outline: transparent;
 }
 
 .review-form-input:focus{
@@ -678,7 +680,7 @@ body{
         left: 16px;
         transform: translateY(-50%);
         fill: #2E2F42;
-        transition: fill 250ms ease-out;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-input:focus + .review-form-field-icon{
@@ -716,7 +718,10 @@ body{
         border-radius: 4px;
         border: 1px solid rgba(46, 47, 66, 0.40);
         resize: none;
-        transition: border-color 250ms ease-out;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        color: rgba(46, 47, 66, 0.4);
+        background-color: transparent;
+        outline: transparent;
 }
 
 .review-form-comment::placeholder{
@@ -739,14 +744,20 @@ body{
         border-radius: 2px;
         border: 1px solid rgba(46, 47, 66, 0.40);
         cursor: pointer;
-        fill: none;
+        fill: transparent;
         margin-right: 8px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .review-form-checkbox:checked
  + .review-form-checkbox-label
   > .review-form-own-checkbox{
         background-color: #404BBF;
+        border: none;
+        fill: #F4F4FD;
 }
 
 
@@ -754,7 +765,7 @@ body{
         font-size: 12px;
         font-weight: 400;
         line-height: 1.17;
-        letter-spacing: 0.03em;
+        letter-spacing: 0.04em;
         color: #8E8F99;
 }
 
