--- a/css/style.css
+++ b/css/style.css
@@ -658,6 +658,10 @@ body{
         margin-bottom: 4px;
 }
 
+.review-form-comment-wrapper{
+        margin-bottom: 16px;
+}
+
 .review-form-input{
         width: 100%;
         height: 40px;
